src/test/ui/resolve/issue-3907-2.stderr
error[E0038]: the trait `issue_3907::Foo` cannot be made into an object
  --> $DIR/issue-3907-2.rs:11:12
   |
LL | fn bar(_x: Foo) {}
   |            ^^^ the trait `issue_3907::Foo` cannot be made into an object
   | 
  ::: $DIR/auxiliary/issue-3907.rs:2:8
   |
LL |     fn bar();
   |        --- the trait cannot be made into an object because associated function `bar` has no `self` parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
